--- a/Start.html
+++ b/Start.html
@@ -5,5 +5,5 @@
 	  <body>
 	  <center><h1>Эта страница по изучению простых английских времен!</h1></center><br>
 	  <img src="British.png" width="100%" height="70%">
-	  <body>
+	  </body>
 </html>	
