--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 	<head>
 		  <title> Three English Tenses </title>
 	</head>
-	<frameset cols="*,800,*" border="5" >
+	<frameset cols="*,800,*" border="0" >
+	<noframes> Hueta </noframes>
 			  <frame src="Sides.html" noresize >
-			  		 <frameset rows="150,*" border="800" bordercolor="blue" >
+			  		 <frameset rows="150,*" border="10" bordercolor="blue" >
 			  		 <frame src="Top.html" scrolling="no" noresize>
 			  		 <frame src="Start.html" name="main" noresize>
 			  		 </frameset>
