--- a/Future.html
+++ b/Future.html
@@ -4,7 +4,7 @@
 	  </head>
 	  <body>
 	 <center> <font size="5" color="blue" face="arial"> Future Simple </font><br> </center>
-<pr>&nbsp &nbsp &nbsp Время Future Simple ссылается на действие, которое совершится в неопределенном или отдаленном будущем. Простое будущее время обычно используется с обстоятельствами: tomorrow (завтра), next year (в следующем году), in five years (через пять лет), in 2035 (в 2035 году) и т.п.</pr>
+<pr>&nbsp &nbsp &nbsp  (Do you know?)</pr>
 	  <br> <img src="Future.jpg" >
 	  </body>
 </html>	
