--- a/Past.html
+++ b/Past.html
@@ -4,7 +4,7 @@
 	  </head>
 	  <body>
 	  <center><font size="5" color="blue" face="arial"> Past Simple </font> <br> </center>
-<pr>&nbsp &nbsp &nbsp Past Simple (простое прошедшее) – одно из самых распространенных времен в английском языке. С помощью Past Simple мы можем передать события, происходившие в прошлом, а в некоторых случаях и события в настоящем. Поэтому на любом уровне владения английским языком вы узнаете что-то новое о Past Simple.</pr>
-	  <br> <img src="Past.jpg" >
+<pr>&nbsp &nbsp &nbsp Only when I stop to think<br>
+<img src="Past.jpg">
 	  </body>
 </html>	
