--- a/Future.html
+++ b/Future.html
@@ -5,7 +5,7 @@
 	  <body>
 	 <center> <font size="5" color="blue" face="arial"> Future Simple </font><br> </center>
 <pr>&nbsp &nbsp &nbsp  (Do you know?)</pr>
-	  <br> <img src="Future.jpg" >
+	  <br> <img src="Future.JPG" >
 	  </body>
 </html>	
 	
