--- a/Past.html
+++ b/Past.html
@@ -5,6 +5,6 @@
 	  <body>
 	  <center><font size="5" color="blue" face="arial"> Past Simple </font> <br> </center>
 <pr>&nbsp &nbsp &nbsp Only when I stop to think<br>
-<img src="Past.jpg">
+<img src="Past.JPG">
 	  </body>
 </html>	
