--- a/Present.html
+++ b/Present.html
@@ -5,6 +5,6 @@
 	  <body>
 	<center>  <font size="5" color="blue" face="arial"> Present Simple </font><br> </center>
 <pr> &nbsp &nbsp &nbsp I love you <br>
-<img src="Present.jpg">
+<img src="Present.JPG">
 	  </body>
 </html>	
