--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <html>
 	<head>
-		  <title> Three English Tenses </title>
+		<title> Love is the answer </title>
 	</head>
-	<frameset cols="*,800,*" border="0" >
-	<noframes> Hueta </noframes>
-			  <frame src="Sides.html" noresize >
-			  		 <frameset rows="150,*" border="10" bordercolor="blue" >
-			  		 <frame src="Top.html" scrolling="no" noresize>
-			  		 <frame src="Start.html" name="main" noresize>
-			  		 </frameset>
-			  <frame src="Sides.html" noresize>	
-	</frameset>
+	<body bgcolor="black">
+		<center>
+		<h1> <font color="red"> I love you, Nataliya! </font> </h1> <br>
+		<img src="first.png">
+		</center>
+	</body>
 </html>
